--- a/detail.html
+++ b/detail.html
@@ -45,7 +45,7 @@
               <a href="index.html">Jerome Chua</a>
             </h1>
             <p class="sidebar-p">
-              Previously working as a data anylst, now turned software engineer.
+              Previously working as a data analyst, now turned software engineer.
             </p>
             <ul class="sidebar-menu">
               <!-- Link-->
