--- a/portfolio/levelsportal.html
+++ b/portfolio/levelsportal.html
@@ -44,7 +44,7 @@
         <div id="sidebar" class="col-md-4 col-lg-3 sidebar-offcanvas">
           <div class="sidebar-content">
             <h1 class="sidebar-heading"><a href="index.html">Jerome Chua</a></h1>
-            <p class="sidebar-p">Previously working as a data anylst, now turned software engineer.</p>
+            <p class="sidebar-p">Hi there, I was previously working as a data analyst, now turned software engineer. </p>
 
        <ul class="sidebar-menu">
               <!-- Link-->
@@ -106,14 +106,14 @@
                 <div class='d-flex'>
                   <div class='text-center mr-3'>
                   <a
-                    href=""
+                    href=https://cryptic-cliffs-89584.herokuapp.com/home
                     title=""
                     class="github mr-3"
                   >
-                    <span title="Levels Portal="
+                    <span title="Levels Portal"
                       ><i class="fa fa-external-link-square project-github-link text-center"></i></span
                   ></a>
-                <div class='repo-label text-center'>Deployed App</div>  
+                  <div class='repo-label text-center'>Deployed App</div>  
                   </div>
                   <div class='text-center'>
                   <a
@@ -127,17 +127,16 @@
                   <div class='repo-label text-center'>GitHub Repo</div>  
                   </div>
                   </div>
-                  </div>
                 </div>
                 <p class="lead">
-                A tech job portal with job title autocomplete, feature to filter for relevant skill sets, save preferred jobs to apply
+                  A tech job portal with job search autocomplete, narrow job search by filtering for relevant skill sets, save preferred jobs to apply in future
                 </p>
                 <div id="main-slider" class="owl-carousel owl-theme">
                   <div class="youtube-embed d-flex justify-content-center">
                     <iframe
                       width="853"
                       height="480"
-                      src="https://www.youtube.com/embed/1-hfb2OCgQw"
+                      src="https://www.youtube.com/embed/oklIZerUd1w"
                       frameborder="0"
                       allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
                       allowfullscreen
@@ -175,35 +174,43 @@
                 <!-- /#main-slider-->
                 <h3>App Features</h3>
                 <ol>
-                  <li>&nbsp Search for jobs related to tech  </li>
+                  <li>&nbsp Search for jobs related to tech </li>
                   <li>&nbsp Refine job search by filtering for relevant skillsets </li>
-                  <li>&nbsp Save relevant jobs to be applied later on company site</li>
+                  <li>&nbsp Save relevant jobs to be applied later on company site </li>
                   <li>&nbsp See the skillsets required for each job</li>
                 </ol>
+
                 <h3>Technologies Used</h3>
                 <ul>
                   <li><b>Frontend:</b> React, Bootstrap, SASS, HTML/CSS</li>
-                  <li><b>Backend:</b> PostgresSQL, Express, Sequelize</li>
+                  <li><b>Backend:</b> PostgreSQL, Express, Sequelize</li>
                   <li><b>Version Control:</b> Git</li>                  
                   <li><b>Other Libraries:</b> react-dnd, react-bootstrap-typeahead, moment, axios</li>                              
                 </ul>
+
                 <h3>Challenges</h3>
                 <ul>
-                  <li>test
+                  <li>Getting seed data in a time-effective manner
                   </li>
-                  <li>test</li>
-                  <li>test
+                  <li>Balancing trade-offs between interesting features vs. MVP and base user flow </li>
+                  <li>On hindsight, working without a store, makes the code tougher to review, wherease with a store in later projects, we can at a glance what are the routes being used
                   </li>
+
                 </ul>
                 <h3>What I'd Do Differently</h3>
                 <ul>
-                  <li>
+                  <li>Complete base user flow and then work on other functionality
                   </li>
-                  <li>
+                  <li>Load all jobs upon first render, so that filtering would be easier
                   </li>
-                  <li>
+                  <li>Utilise Git branches more often for different features
                   </li>
                 </ul>
+                 <h3>Test Details</h3>
+                 <ul>
+                   <li>Email: jerome@test.com</li>
+                   <li>Password: jerome</li>
+                 </ul>
               </div>
             </div>
           </div>
