--- a/portfolio/pfintracker.html
+++ b/portfolio/pfintracker.html
@@ -44,7 +44,7 @@
         <div id="sidebar" class="col-md-4 col-lg-3 sidebar-offcanvas">
           <div class="sidebar-content">
             <h1 class="sidebar-heading"><a href="index.html">Jerome Chua</a></h1>
-            <p class="sidebar-p">Previously working as a data anylst, now turned software engineer.</p>
+            <p class="sidebar-p">Hi there, I was previously working as a data analyst, now turned software engineer.</p>
 
        <ul class="sidebar-menu">
               <!-- Link-->
@@ -176,7 +176,7 @@
                   </div>
                 </div>
                 <!-- /#main-slider-->
-                <h3>Features of the App</h3>
+                <h3>App Features</h3>
                 <ol>
                   <li>&nbsp Log what user has spent on </li>
                   <li>&nbsp User is able to observe which categories their spendings fall into eg. Food & Drinks </li>
@@ -213,6 +213,11 @@
                   <li>Refactor more often with every new branch merge
                   </li>
                 </ul>
+                 <h3>Test Details</h3>
+                 <ul>
+                   <li>Email: jerome123@gmail.com</li>
+                   <li>Password: pw123</li>
+                 </ul>
               </div>
             </div>
           </div>
