--- a/portfolio/travelplanner.html
+++ b/portfolio/travelplanner.html
@@ -44,7 +44,7 @@
         <div id="sidebar" class="col-md-4 col-lg-3 sidebar-offcanvas">
           <div class="sidebar-content">
             <h1 class="sidebar-heading"><a href="index.html">Jerome Chua</a></h1>
-            <p class="sidebar-p">Previously working as a data anylst, now turned software engineer.</p>
+            <p class="sidebar-p">Hi there, I was previously working as a data analyst, now turned software engineer.</p>
 
        <ul class="sidebar-menu">
               <!-- Link-->
@@ -106,7 +106,7 @@
                 <div class='d-flex'>
                   <div class='text-center mr-3'>
                   <a
-                    href=""
+                    href=https://travelplanner-jz.netlify.app/
                     title=""
                     class="github mr-3"
                   >
@@ -147,7 +147,7 @@
                     <iframe
                       width="853"
                       height="480"
-                      src="https://www.youtube.com/embed/1-hfb2OCgQw"
+                      src="https://www.youtube.com/embed/X5AA68wZYzc"
                       frameborder="0"
                       allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
                       allowfullscreen
