--- a/about.html
+++ b/about.html
@@ -42,8 +42,7 @@
             <h1 class="sidebar-heading">
               <a href="index.html">Jerome Chua</a>
             </h1>
-            <p class="sidebar-p">Hi there, I was previously working as a data anylst, now turned
-              software engineer.            </p>
+            <p class="sidebar-p">Hi there, I was previously working as a data analyst, now turned software engineer.</p>
             <ul class="sidebar-menu">
               <!-- Link-->
               <li class="sidebar-item">
