--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
               <a href="index.html">Jerome Chua</a>
             </h1>
             <p class="sidebar-p">
-              Hi there, I was previously working as a data anylst, now turned
+              Hi there, I was previously working as a data analyst, now turned
               software engineer.
             </p>
             <ul class="sidebar-menu">
