--- a/portfolio/bookrepo.html
+++ b/portfolio/bookrepo.html
@@ -44,7 +44,7 @@
         <div id="sidebar" class="col-md-4 col-lg-3 sidebar-offcanvas">
           <div class="sidebar-content">
             <h1 class="sidebar-heading"><a href="index.html">Jerome Chua</a></h1>
-            <p class="sidebar-p">Previously working as a data anylst, now turned software engineer.</p>
+            <p class="sidebar-p">Hi there, I was previously working as a data analyst, now turned software engineer.</p>
 
        <ul class="sidebar-menu">
               <!-- Link-->
