Add connect four base html and images

--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
                     class="img-fluid"
                 /></a>
                 <div class="box-masonry-text">
-                  <h4><a href="groupBuy.html">Levels Portal</a></h4>
+                  <h4><a href="/portfolio/levelsportal.html">Levels Portal</a></h4>
                   <div class="box-masonry-desription">
                     <p>
                       A tech job portal with search & filters for users with relevant skill sets to find preferred jobs to apply
@@ -181,7 +181,7 @@
                 </div>
               </div>
             </div>
-            <div class="col-md-6 grid-item">
+            <div class="col-md-6 mt-3 grid-item">
               <div class="box-masonry">
                 <a
                   href="movegenre.html"
@@ -223,22 +223,22 @@
                 </div>
               </div>             
             </div>
-            <div class="col-md-6 grid-item">
+            <div class="col-md-6 mt-3 grid-item">
               <div class="box-masonry">
                 <a
-                  href="videopoker.html"
+                  href="/portfolio/connectfour.html"
                   title=""
                   class="box-masonry-image with-hover-overlay with-hover-icon"
                   ><img
-                    src="img/connectfour.png"
+                    src="img/portfolio/connectfour-ss2.png"
                     alt=""
                     class="img-fluid"
                 /></a>
                 <div class="box-masonry-text">
-                  <h4><a href="connectfour.html">Connect Four</a></h4>
+                  <h4><a href="/portfolio/connectfour.html">Connect Four</a></h4>
                   <div class="box-masonry-desription">
                     <p>
-                      Classic connectfour
+                      The objective of Connect Four is to be first to form a horizontal, vertical, or diagonal line of four of one's own discs
                     </p>
                   </div>
                 </div>
