--- a/about.html
+++ b/about.html
@@ -102,7 +102,7 @@
                 <div class="row">
                   <div class="col-lg-12">
                     <p>
-                     I enjoy creating things from scratch. I embarked on many different interests and managed to gain professional experience. But software engineering is one of the very few things that allow me to gain deeper focus, enjoyment and fulfilment.
+                     I enjoy creating things from scratch. I embarked on many different interests and managed to gain professional experience. But building software is one of the very few things that has allowed me to enter deep focus, enjoyment and fulfilment.
                     </p>
                     <p>This is where I will be putting in most of my free time and developing mastery as I continue embark on this journey as a software engineer.</p>
                   </div>
