Complete connect four page

--- a/portfolio/connectfour.html
+++ b/portfolio/connectfour.html
@@ -181,11 +181,9 @@
 
                 <h3>Challenges</h3>
                 <ul>
-                  <li>a
+                  <li>Passing data from backend to home page to individual games
                   </li>
-                  <li>b</li>
-                  <li>c
-                  </li>
+                  <li>Organising code related DOM elements in a more structured way i.e more helper functions </li>
 
                 </ul>
                 <h3>What I'd Do Differently</h3>
@@ -193,6 +191,10 @@
                   <li>Create functions for certain backend routes to send/retrieve the game board data 
                   </li>
                   <li>Decompose DOM-related code related into more helper functions for ease of reviewing code
+                  </li>
+                  <li>Refactor winning conditions to cater for x number of discs in-a-row
+                  </li>
+                   <li>Have some of the global values orginate from backend instead
                   </li>
                 </ul>
                  <h3>Test Details</h3>
