--- a/index.html
+++ b/index.html
@@ -238,7 +238,7 @@
                   <h4><a href="/portfolio/connectfour.html">Connect Four</a></h4>
                   <div class="box-masonry-desription">
                     <p>
-                      The objective of Connect Four is to be first to form a horizontal, vertical, or diagonal line of four of one's own discs
+                      The objective of the game is to be first to form a horizontal, vertical, or diagonal line of four of one's own discs
                     </p>
                   </div>
                 </div>
