Add mlb prediction page

--- a/index.html
+++ b/index.html
@@ -184,19 +184,19 @@
             <div class="col-md-6 mt-3 grid-item">
               <div class="box-masonry">
                 <a
-                  href="movegenre.html"
+                  href="/portfolio/mlbprediction.html"
                   title=""
                   class="box-masonry-image with-hover-overlay with-hover-icon"
                   ><img
-                    src="img/moviegenre.png"
+                    src="img/portfolio/mlb.png"
                     alt=""
                     class="img-fluid"
                 /></a>
                 <div class="box-masonry-text">
-                  <h4><a href="moviegenre.html">Movie Genre Prediction</a></h4>
+                  <h4><a href="/portfolio/mlbprediction.html">Movie Genre Prediction</a></h4>
                   <div class="box-masonry-desription">
                     <p>
-                     Developed multi-label classification algorithm to predict unseen movie posters genres with 0.8 model accuracy
+                     Wrote a multi-label classification algorithm to predict unseen movie posters genres with 0.8 model accuracy
                     </p>
                   </div>
                 </div>
@@ -205,19 +205,19 @@
             <div class="col-md-6  mt-3 grid-item">
               <div class="box-masonry">
                 <a
-                  href="videopoker.html"
+                  href="/portfolio/videopoker.html"
                   title=""
                   class="box-masonry-image with-hover-overlay with-hover-icon"
                   ><img
-                    src="img/videopoker.png"
+                    src="img/portfolio/videopoker.png"
                     alt=""
                     class="img-fluid"
                 /></a>
                 <div class="box-masonry-text">
-                  <h4><a href="videoPoker.html">Video Poker</a></h4>
+                  <h4><a href="/portfolio/videopoker.html">Video Poker</a></h4>
                   <div class="box-masonry-desription">
                     <p>
-                      An arcade casino game remake, based the classic five-card draw poker
+                      An arcade casino game remake, based on the classic five-card draw poker
                     </p>
                   </div>
                 </div>
