Update styling and wordings

--- a/about.html
+++ b/about.html
@@ -104,7 +104,7 @@
                     <p>
                      I enjoy creating things from scratch. I embarked on many different interests and managed to gain professional experience. But building software is one of the very few things that has allowed me to enter deep focus, enjoyment and fulfilment.
                     </p>
-                    <p>This is where I will be putting in most of my free time and developing mastery as I continue embark on this journey as a software engineer.</p>
+                    <p>This is where I will be putting in most of my free time and developing mastery as I continue to embark on this journey as a software engineer.</p>
                   </div>
                 </div>
               
