--- a/portfolio/videopoker.html
+++ b/portfolio/videopoker.html
@@ -158,15 +158,13 @@
                 <!-- /#main-slider-->
                 <h3>App Features</h3>
                 <ol>
-                  <li>&nbsp Users can choose from a list of players who they want to play with</li>
-                  <li>&nbsp Game can be rejoined and game can resume from where it left off</li>
-                  <li>&nbsp Game winner will be announced and game list on the lobby will be refreshed</li>
+                  <li>&nbsp Users can choose to hold cards desired and swap the remaining for other cards in the pile</li>
+                  <li>&nbsp Credits generated dependent on combo attained</li>
                 </ol>
 
                 <h3>Technologies Used</h3>
                 <ul>
                   <li><b>Frontend:</b> HTML, CSS, Vanilla JS <em>(with DOM Manipulation)</em></li>
-                  <li><b>Backend:</b> PostgreSQL, Express, Sequelize</li>
                   <li><b>Version Control:</b> Git</li>                                               
                 </ul>
 
