--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
             </h1>
           </div>
           <div class="grid row">
-            <div class="col-md-6 grid-item">
+            <div class="col-md-6 my-2 grid-item">
               <div class="box-masonry">
                 <a
                   href="/portfolio/pfintracker.html"
@@ -117,7 +117,7 @@
               </div>             
             </div>   
 
-            <div class="col-md-6 grid-item">
+            <div class="col-md-6 my-2 grid-item">
               <div class="box-masonry">
                 <a
                   href="/portfolio/levelsportal.html"
@@ -139,7 +139,7 @@
               </div>
             </div>
 
-            <div class="col-md-6  mt-4 grid-item">
+            <div class="col-md-6 my-2 grid-item">
               <div class="box-masonry">
                 <a
                   href="/portfolio/bookrepo.html"
@@ -160,7 +160,7 @@
                 </div>
               </div>
             </div>
-            <div class="col-md-6 mt-3 grid-item">
+            <div class="col-md-6 my-2 grid-item">
               <div class="box-masonry">
                 <a
                   href="/portfolio/travelplanner.html"
@@ -181,7 +181,7 @@
                 </div>
               </div>
             </div>
-            <div class="col-md-6 mt-3 grid-item">
+            <div class="col-md-6 my-2 grid-item">
               <div class="box-masonry">
                 <a
                   href="/portfolio/mlbprediction.html"
@@ -202,7 +202,7 @@
                 </div>
               </div>
             </div>            
-            <div class="col-md-6  mt-3 grid-item">
+            <div class="col-md-6 mt-4 mb-1 grid-item">
               <div class="box-masonry">
                 <a
                   href="/portfolio/videopoker.html"
@@ -223,7 +223,7 @@
                 </div>
               </div>             
             </div>
-            <div class="col-md-6 mt-3 grid-item">
+            <div class="col-md-6 mt-4 mb-1 grid-item">
               <div class="box-masonry">
                 <a
                   href="/portfolio/connectfour.html"
