Touch up, correct typos

--- a/index.html
+++ b/index.html
@@ -196,7 +196,7 @@
                   <h4><a href="/portfolio/mlbprediction.html">Movie Genre Prediction</a></h4>
                   <div class="box-masonry-desription">
                     <p>
-                     Wrote a multi-label classification algorithm to predict unseen movie posters genres with 0.8 model accuracy
+                     A multi-label classification algorithm to predict unseen movie posters genres with 0.8 model accuracy
                     </p>
                   </div>
                 </div>
