--- a/portfolio/bookrepo.html
+++ b/portfolio/bookrepo.html
@@ -207,7 +207,7 @@
                 <ul>
                   <li>Routes could be named better - in accordance to the functionality of the route
                   </li>
-                  <li>Deployment to be done as soon as MVP was up, issues arise when there are other technologies at play eg. AWS, dealin with keys and secrets etc.
+                  <li>Deployment to be done as soon as MVP was up, issues arise when there are other technologies at play eg. AWS, dealing with keys and secrets etc.
                   </li>
                   <li>Have a universal unique ID for each book, rather than for each user
                   </li>
