--- a/contact.html
+++ b/contact.html
@@ -108,7 +108,7 @@
                 <h4>You can find me here:</h4>
                 <p class="social social--big">
                   <a
-                    href="https://github.com/jerome-chua4"
+                    href="https://github.com/jerome-chua"
                     title=""
                     class="github"
                     ><i class="fa fa-github"></i
